--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet publish ./Silo/Orleans.ShoppingCart.Silo.csproj --configuration Release
 
     - name: Login to Azure
-      uses: azure/login@v1
+      uses: azure/login@v-luanyi@microsoft.com
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
